fixed styling issues on mobile

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   width: 100%;
   height: fit-content;
-  margin: 20px auto 120px auto;
+  margin: 20px auto 75px auto;
   padding: 0 20px;
   width: 100vw;
   max-width: $main-width;
