--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,20 +1,13 @@
-body.info a[route="info"],
-body.portfolio a[route="portfolio"],
-body.links a[route="links"] {
-  color: $foreground-primary !important;
-
-  &:after {
-    $underline-width: 20px;
-    content: "";
-    height: 1px;
-    width: $underline-width;
-    background-color: $foreground-primary;
-    position: absolute;
-    bottom: 0.5em;
-    left: calc(50% - #{$underline-width * 0.5});
-  }
+body.info a[route]:not([route="info"]),
+body.portfolio a[route]:not([route="portfolio"]),
+body.links a[route]:not([route="links"]) {
+  color: $foreground-secondary !important;
 }
 
 header {
   user-select: none;
+
+  a[route] {
+    text-decoration: none;
+  }
 }
